--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Tic Tac Toe!</h1>
+    <hr>
+    <div id="main-div">
+        <div class="row">
+            <span id="row-1-span-1">B</span>
+            <span id="row-1-span-2">B</span>
+            <span id="row-1-span-3">B</span>
+        </div>
+        <div class="row">
+            <span id="row-2-span-1">B</span>
+            <span id="row-2-span-2">B</span>
+            <span id="row-2-span-3">B</span>
+        </div>
+        <div class="row">
+            <span id="row-3-span-1">B</span>
+            <span id="row-3-span-2">B</span>
+            <span id="row-3-span-3">B</span>
+        </div>
+        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
