Add user form to index.html. Update playGame() in script.js to change visibility of form & div containing gameboard when button in form is clicked.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 <body>
     <h1>Tic Tac Toe!</h1>
     <hr>
+
+    <form id="main-form" action="">
+        <label for="playerName">Name:</label>
+        <input type="text" name="playerName" id="playerName">
+        <br>
+        <label for="playerSymbol">Symbol:</label>
+        <input type="text" name="playerSymbol" id="playerSymbol">
+        <br>
+        <button id="gameStartButton" type="button">Start Game!</button>
+    </form>
+
     <div id="main-div">
         <div class="row">
             <span id="row-1-span-1">B</span>
