Add input functionality that changes board on webpage via script.js (playGame()).

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <br>
         <label for="player1-column-input">Player 1 Column Input:</label>
         <input type="text" name="player1-column-input" id="player1-column-input">
+        <br>
+        <button id="player1InputButton" type="button">Input</button>
     </form>
 
     <div id="main-div">
